fix navbar overflow

--- a/fragments/main.css
+++ b/fragments/main.css
@@ -96,7 +96,7 @@ main {
     transition: 0.2s;
     float: right;
     text-decoration: none;
-    overflow: scroll;
+    overflow: hidden;
     text-align: center;
 }
 .link:hover {
@@ -113,6 +113,9 @@ p {
     font-size: 20px;
     line-height: 1.7;
 }
+abbr {
+    text-decoration: none;
+}
 .post-title {
     font-size: 40px;
     margin-bottom: 0;
@@ -125,6 +128,10 @@ p {
     width: 55%;
     margin-left: auto;
     margin-right: auto; 
+}
+.footer {
+    font-size: medium;
+    padding: 10px;
 }
 
 /* COLORS */
